# projecto-final-prograforever

./: CMakeLists.txt  README.md
src/: Ball.cpp  Ball.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  main.cpp  model_serializer.cpp  model_serializer.h  neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h  trainer.cpp  training_observer.h
